
      - Changed css styling of the preview publisher buttons, making
        easier for users to integrate the publisher into their own
        layout.

      - If no title is given, the index is considered a 'pure' anchor,
        and will not be found by Indexers.

      - XHTML compliance improvements

    Bugs Fixed:

      - A security fix in Zope 2.10.3 broke install.py.

  Silva 1.6

    Features added:

      - 2007-03-15: Containers show their modification datetime in the
        'modified' column of the contents table in edit mode.

      - If a file or image asset has an extension in its id, this is
        preserved in the fullmedia export, so if the zip file is unzipped
        by hand, the file types of the assets are obvious in those cases,
        and will preview properly in operating systems that support it.

      - If present, SilvaLayout will automaticly be registered in
        service_extensions if a new SilvaRoot is created. Note that just
        having the SilvaLayout product on the file system will break the
        ZODB based layout.

      - The Extension Service page now has a button 'rebuild catalog' which
        will empty the silva catalog and reindex all silva content.

      - Added Atom/RSS feed capabilities to arbitrary containers. To
        use this go to the 'settings' in the properties tab of a
        container, and enable the checkbox marked 'allow feeds'. After
        that, adding /rss.xml or /atom.xml after that container's url
        just works. The feeds, for now, are feeds of only the
        published Silva Documents in that container.

      - IVersioning has a method get_first_publication_date, which returns
        the earliest date any version of the content was ever published.
        Useful for RSS/Atom output.

      - Silva Find features: When adding a new silvaroot a SilvaFind
        instance named "search" will be placed in the root of the site.