@@ -275,6 +275,12 @@ Silva changes
 
       - A security fix in Zope 2.10.3 broke install.py.
 
+    Ported from the 1.6 branch:
+
+      - External sources are removed when extracting the fulltext from
+        a document, since the values of the parameters are not
+        necessarily meant to be public information.
+
   Silva 1.6
 
     Features added:
